--- a/src/main/resources/static/components/list/list.html
+++ b/src/main/resources/static/components/list/list.html
@@ -8,11 +8,15 @@
             <button class="btn btn-primary" type="submit">Search</button>
         </form>
     </div>
-    {{$ctrl.filter | json}}
+
     <div class="col-md-4">
         <button class="btn btn-success" ng-click="$ctrl.create()">Create</button>
     </div>
 </div>
+
+<p class="alert-danger alert" ng-if="$ctrl.error.length">
+{{$ctrl.error}}
+</p>
 
 
 <table class="table table-hover table-striped">
@@ -37,3 +41,5 @@
     </tr>
     </tbody>
 </table>
+  <ul uib-pagination total-items="$ctrl.filter.totalItems" ng-model="$ctrl.filter.page" max-size="5"
+  class="pagination-sm" boundary-link-numbers="true" rotate="false" ng-change="$ctrl.pageChange()"></ul>
